data/parsing_rule.output
Grammar

    0 $accept: pipe_sequence $end

    1 pipe_sequence: command
    2              | pipe_sequence PIPE command

    3 and_or: pipe_sequence
    4       | and_or AND pipe_sequence
    5       | and_or OR pipe_sequence

    6 subshell: L_BRACKET and_or R_BRACKET

    7 command: simple_command
    8        | subshell
    9        | subshell redirect_list

   10 redirect_list: io_redirect
   11              | redirect_list io_redirect

   12 simple_command: cmd_prefix cmd_word cmd_suffix
   13               | cmd_prefix cmd_word
   14               | cmd_prefix
   15               | cmd_name cmd_suffix
   16               | cmd_name

   17 cmd_name: WORD

   18 cmd_word: WORD

   19 cmd_prefix: io_redirect
   20           | cmd_prefix io_redirect
   21           | ASSIGNMENT_WORD
   22           | cmd_prefix ASSIGNMENT_WORD

   23 cmd_suffix: io_redirect
   24           | cmd_suffix io_redirect
   25           | WORD
   26           | cmd_suffix WORD

   27 io_redirect: io_file
   28            | io_here

   29 io_file: RED_OUT filename
   30        | RED_IN filename
   31        | APPEND filename

   32 filename: WORD

   33 io_here: HERE_DOC here_end

   34 here_end: WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 17 18 25 26 32 34
ASSIGNMENT_WORD (259) 21 22
RED_IN (260) 30
RED_OUT (261) 29
PIPE (262) 2
HERE_DOC (263) 33
APPEND (264) 31
AND (265) 4
OR (266) 5
L_BRACKET (267) 6
R_BRACKET (268) 6


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
pipe_sequence (15)
    on left: 1 2, on right: 0 2 3 4 5
and_or (16)
    on left: 3 4 5, on right: 4 5 6
subshell (17)
    on left: 6, on right: 8 9
command (18)
    on left: 7 8 9, on right: 1 2
redirect_list (19)
    on left: 10 11, on right: 9 11
simple_command (20)
    on left: 12 13 14 15 16, on right: 7
cmd_name (21)
    on left: 17, on right: 15 16
cmd_word (22)
    on left: 18, on right: 12 13
cmd_prefix (23)
    on left: 19 20 21 22, on right: 12 13 14 20 22
cmd_suffix (24)
    on left: 23 24 25 26, on right: 12 15 24 26
io_redirect (25)
    on left: 27 28, on right: 10 11 19 20 23 24
io_file (26)
    on left: 29 30 31, on right: 27
filename (27)
    on left: 32, on right: 29 30 31
io_here (28)
    on left: 33, on right: 28
here_end (29)
    on left: 34, on right: 33


state 0

    0 $accept: . pipe_sequence $end

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6
    L_BRACKET        shift, and go to state 7

    pipe_sequence   go to state 8
    subshell        go to state 9
    command         go to state 10
    simple_command  go to state 11
    cmd_name        go to state 12
    cmd_prefix      go to state 13
    io_redirect     go to state 14
    io_file         go to state 15
    io_here         go to state 16


state 1

   17 cmd_name: WORD .

    $default  reduce using rule 17 (cmd_name)


state 2

   21 cmd_prefix: ASSIGNMENT_WORD .

    $default  reduce using rule 21 (cmd_prefix)


state 3

   30 io_file: RED_IN . filename

    WORD  shift, and go to state 17

    filename  go to state 18


state 4

   29 io_file: RED_OUT . filename

    WORD  shift, and go to state 17

    filename  go to state 19


state 5

   33 io_here: HERE_DOC . here_end

    WORD  shift, and go to state 20

    here_end  go to state 21


state 6

   31 io_file: APPEND . filename

    WORD  shift, and go to state 17

    filename  go to state 22


state 7

    6 subshell: L_BRACKET . and_or R_BRACKET

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6
    L_BRACKET        shift, and go to state 7

    pipe_sequence   go to state 23
    and_or          go to state 24
    subshell        go to state 9
    command         go to state 10
    simple_command  go to state 11
    cmd_name        go to state 12
    cmd_prefix      go to state 13
    io_redirect     go to state 14
    io_file         go to state 15
    io_here         go to state 16


state 8

    0 $accept: pipe_sequence . $end
    2 pipe_sequence: pipe_sequence . PIPE command

    $end  shift, and go to state 25
    PIPE  shift, and go to state 26


state 9

    8 command: subshell .
    9        | subshell . redirect_list

    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 8 (command)

    redirect_list  go to state 27
    io_redirect    go to state 28
    io_file        go to state 15
    io_here        go to state 16


state 10

    1 pipe_sequence: command .

    $default  reduce using rule 1 (pipe_sequence)


state 11

    7 command: simple_command .

    $default  reduce using rule 7 (command)


state 12

   15 simple_command: cmd_name . cmd_suffix
   16               | cmd_name .

    WORD      shift, and go to state 29
    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 16 (simple_command)

    cmd_suffix   go to state 30
    io_redirect  go to state 31
    io_file      go to state 15
    io_here      go to state 16


state 13

   12 simple_command: cmd_prefix . cmd_word cmd_suffix
   13               | cmd_prefix . cmd_word
   14               | cmd_prefix .
   20 cmd_prefix: cmd_prefix . io_redirect
   22           | cmd_prefix . ASSIGNMENT_WORD

    WORD             shift, and go to state 32
    ASSIGNMENT_WORD  shift, and go to state 33
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6

    $default  reduce using rule 14 (simple_command)

    cmd_word     go to state 34
    io_redirect  go to state 35
    io_file      go to state 15
    io_here      go to state 16


state 14

   19 cmd_prefix: io_redirect .

    $default  reduce using rule 19 (cmd_prefix)


state 15

   27 io_redirect: io_file .

    $default  reduce using rule 27 (io_redirect)


state 16

   28 io_redirect: io_here .

    $default  reduce using rule 28 (io_redirect)


state 17

   32 filename: WORD .

    $default  reduce using rule 32 (filename)


state 18

   30 io_file: RED_IN filename .

    $default  reduce using rule 30 (io_file)


state 19

   29 io_file: RED_OUT filename .

    $default  reduce using rule 29 (io_file)


state 20

   34 here_end: WORD .

    $default  reduce using rule 34 (here_end)


state 21

   33 io_here: HERE_DOC here_end .

    $default  reduce using rule 33 (io_here)


state 22

   31 io_file: APPEND filename .

    $default  reduce using rule 31 (io_file)


state 23

    2 pipe_sequence: pipe_sequence . PIPE command
    3 and_or: pipe_sequence .

    PIPE  shift, and go to state 26

    $default  reduce using rule 3 (and_or)


state 24

    4 and_or: and_or . AND pipe_sequence
    5       | and_or . OR pipe_sequence
    6 subshell: L_BRACKET and_or . R_BRACKET

    AND        shift, and go to state 36
    OR         shift, and go to state 37
    R_BRACKET  shift, and go to state 38


state 25

    0 $accept: pipe_sequence $end .

    $default  accept


state 26

    2 pipe_sequence: pipe_sequence PIPE . command

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6
    L_BRACKET        shift, and go to state 7

    subshell        go to state 9
    command         go to state 39
    simple_command  go to state 11
    cmd_name        go to state 12
    cmd_prefix      go to state 13
    io_redirect     go to state 14
    io_file         go to state 15
    io_here         go to state 16


state 27

    9 command: subshell redirect_list .
   11 redirect_list: redirect_list . io_redirect

    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 9 (command)

    io_redirect  go to state 40
    io_file      go to state 15
    io_here      go to state 16


state 28

   10 redirect_list: io_redirect .

    $default  reduce using rule 10 (redirect_list)


state 29

   25 cmd_suffix: WORD .

    $default  reduce using rule 25 (cmd_suffix)


state 30

   15 simple_command: cmd_name cmd_suffix .
   24 cmd_suffix: cmd_suffix . io_redirect
   26           | cmd_suffix . WORD

    WORD      shift, and go to state 41
    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 15 (simple_command)

    io_redirect  go to state 42
    io_file      go to state 15
    io_here      go to state 16


state 31

   23 cmd_suffix: io_redirect .

    $default  reduce using rule 23 (cmd_suffix)


state 32

   18 cmd_word: WORD .

    $default  reduce using rule 18 (cmd_word)


state 33

   22 cmd_prefix: cmd_prefix ASSIGNMENT_WORD .

    $default  reduce using rule 22 (cmd_prefix)


state 34

   12 simple_command: cmd_prefix cmd_word . cmd_suffix
   13               | cmd_prefix cmd_word .

    WORD      shift, and go to state 29
    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 13 (simple_command)

    cmd_suffix   go to state 43
    io_redirect  go to state 31
    io_file      go to state 15
    io_here      go to state 16


state 35

   20 cmd_prefix: cmd_prefix io_redirect .

    $default  reduce using rule 20 (cmd_prefix)


state 36

    4 and_or: and_or AND . pipe_sequence

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6
    L_BRACKET        shift, and go to state 7

    pipe_sequence   go to state 44
    subshell        go to state 9
    command         go to state 10
    simple_command  go to state 11
    cmd_name        go to state 12
    cmd_prefix      go to state 13
    io_redirect     go to state 14
    io_file         go to state 15
    io_here         go to state 16


state 37

    5 and_or: and_or OR . pipe_sequence

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    RED_IN           shift, and go to state 3
    RED_OUT          shift, and go to state 4
    HERE_DOC         shift, and go to state 5
    APPEND           shift, and go to state 6
    L_BRACKET        shift, and go to state 7

    pipe_sequence   go to state 45
    subshell        go to state 9
    command         go to state 10
    simple_command  go to state 11
    cmd_name        go to state 12
    cmd_prefix      go to state 13
    io_redirect     go to state 14
    io_file         go to state 15
    io_here         go to state 16


state 38

    6 subshell: L_BRACKET and_or R_BRACKET .

    $default  reduce using rule 6 (subshell)


state 39

    2 pipe_sequence: pipe_sequence PIPE command .

    $default  reduce using rule 2 (pipe_sequence)


state 40

   11 redirect_list: redirect_list io_redirect .

    $default  reduce using rule 11 (redirect_list)


state 41

   26 cmd_suffix: cmd_suffix WORD .

    $default  reduce using rule 26 (cmd_suffix)


state 42

   24 cmd_suffix: cmd_suffix io_redirect .

    $default  reduce using rule 24 (cmd_suffix)


state 43

   12 simple_command: cmd_prefix cmd_word cmd_suffix .
   24 cmd_suffix: cmd_suffix . io_redirect
   26           | cmd_suffix . WORD

    WORD      shift, and go to state 41
    RED_IN    shift, and go to state 3
    RED_OUT   shift, and go to state 4
    HERE_DOC  shift, and go to state 5
    APPEND    shift, and go to state 6

    $default  reduce using rule 12 (simple_command)

    io_redirect  go to state 42
    io_file      go to state 15
    io_here      go to state 16


state 44

    2 pipe_sequence: pipe_sequence . PIPE command
    4 and_or: and_or AND pipe_sequence .

    PIPE  shift, and go to state 26

    $default  reduce using rule 4 (and_or)


state 45

    2 pipe_sequence: pipe_sequence . PIPE command
    5 and_or: and_or OR pipe_sequence .

    PIPE  shift, and go to state 26

    $default  reduce using rule 5 (and_or)
